--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "client": "cd client && npm start",
     "server": "node server/server.js",
     "dev": "ts-node ./lib/server.ts",
+    "build": "npm run tsc && cd client && npm run build",
     "tsc": "tsc",
     "nodemon": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
