--- a/Part2-Step2-InMemory/.gitignore
+++ b/Part2-Step2-InMemory/.gitignore
@@ -2,20 +2,13 @@
 
 # dependencies
 /node_modules
-/uploads/*
-# exception to the rule
-!/uploads/.gitkeep 
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
 
 # testing
-/coverage
 
->>>>>>> part1-step2
-=======
->>>>>>> part1-step1
+
+# production
+/build
+
 # misc
 .DS_Store
 .env.local
