--- a/Part1-Step3-gRPC/package.json
+++ b/Part1-Step3-gRPC/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@grpc/proto-loader": "^0.3.0",
     "grpc": "^1.15.1",
-    "mongoose": "^5.2.17"
+    "mongoose": "^5.2.17",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "jest": "^23.6.0",
